Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/GenLit2.out
GenLit2.java:13:18: compiler.err.type.var.cant.be.deref
1 error
